modified make_tests script to allow running the test as well as building it